gitops/manifests/gotify/install.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
        app.kubernetes.io/name: gotify
    spec:
      containers:
        - name: gotify
          image: gotify/server:2.6.3
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gotify-data
              mountPath: /app/data
            - name: config
              mountPath: /etc/gotify/config.yml
              subPath: config.yml
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data
        - name: config
          configMap:
            name: gotify-config
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: gotify
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify-internal
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.local.timmybtech.com`)
      kind: Rule
      services:
        - name: gotify
          port: 80
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify-public
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.timmybtech.com`)
      kind: Rule
      services:
        - name: gotify
          port: 80
  tls:
    secretName: timmybtech-com-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: igotify
  namespace: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: igotify
  template:
    metadata:
      labels:
        app: igotify
        app.kubernetes.io/name: igotify
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
      containers:
        - name: igotify
          image: ghcr.io/androidseb25/igotify-notification-assist:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: igotify-data
              mountPath: /app/data
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
      volumes:
        - name: igotify-data
          persistentVolumeClaim:
            claimName: igotify-data
---
apiVersion: v1
kind: Service
metadata:
  name: igotify
  namespace: gotify
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: igotify
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: igotify-internal
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`igotify.local.timmybtech.com`)
      kind: Rule
      services:
        - name: igotify
          port: 8080
